--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -13,7 +13,7 @@
   <version>${version}</version>
   <packaging>pom</packaging>
 
-  <name>hippo-catalog</name>
+  <name>${artifactId}</name>
   <url>http://maven.apache.org</url>
 
   <properties>
